<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.view.UserDetailFragment">

    <ImageView
        android:id="@+id/imageViewDetail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:text="@string/username"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewUserNameV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:text="@string/name"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewNameV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewEmailV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/address"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewAddressV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="3"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewZip"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/zipcode"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewZipV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/phone"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewPhoneV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewWebsite"
                    android:layout_width="110dp"
                    android:layout_height="45dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/website"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewWebsiteV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewCompany"
                android:layout_width="110dp"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/company"
                android:textColor="@color/design_default_color_secondary_variant"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCompanyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewCompanyCatchPhrase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textViewCompanyBS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/design_default_color_secondary_variant"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>